fix: elipsis on header text overflow

--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -7,6 +7,9 @@
   line-height: 17px;
   text-align: center;
   color: #FFFFFF;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media (min-width: 768px) {
